# fpscounter

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
include/fpscounter/: fpscounter.hpp
test/: CMakeLists.txt  fpscounter_benchmark.cpp  fpscounter_stress.cpp  fpscounter_test.cpp
